--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #402019;
+  --foreground: #130a07;
 }
 
 @theme inline {
@@ -14,13 +14,88 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffe9cd;
+    --foreground: #130a07;
   }
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: #130a07;
+  font-family: "Pixelify";
+}
+
+.text-white {
+  color: #20110c;
+}
+
+.text-amber{
+  color: #f5c2e7;
+}
+
+.cup_transition{
+  animation: cup_transition 0.5s ease-in-out;
+  -webkit-animation: cup_transition 0.5s ease-in-out;
+  -moz-animation: cup_transition 0.5s ease-in-out;
+  -ms-animation: cup_transition 0.5s ease-in-out;
+  -o-animation: cup_transition 0.5s ease-in-out;
+}
+
+@keyframes cup_transition {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -moz-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    -o-transform: translateY(-20px);
+}
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+}
+  
+}
+
+.bg-amber-200 {
+  background-color: #f5c2e76b;
+}
+.bg-white-200 {
+  background-color: #ffffff6b;
+}
+.bg-green-200 {
+  background-color: #a6e3a16b;
+}
+.bg-red-200 {
+  background-color: #f38ba86b;
+}
+.bg-blue-200 {
+  background-color: #89dceb6b;
+}
+
+
+/* Фоны */
+.bg-day {
+  background: url('/covers/main/day.png') center/cover no-repeat;
+  transition: background 1s;
+}
+.bg-eve {
+  background: url('/covers/main/eve.png') center/cover no-repeat;
+  transition: background 1s;
+}
+
+/* Анимация для цитаты */
+@keyframes fadeInOut {
+  0% { filter:brightness(0); -webkit-filter:brightness(0); opacity: 1; }
+  30% { filter:brightness(1); -webkit-filter:brightness(1); }
+  70% { filter:brightness(1); -webkit-filter:brightness(1); opacity: 1; }
+  100% { filter:brightness(0); -webkit-filter:brightness(0); opacity: 0; }
+}
+.quote-overlay {
+  animation: fadeInOut 5s ease-in-out forwards;
+  -webkit-animation: fadeInOut 5s ease-in-out forwards;
 }
